# arithmoi

./: .gitignore  .hgignore  .hgtags  .hlint.yaml  .travis.yml  .travis.yml.patch  Changes  LICENCE  LICENSE  Setup.hs  TODO  arithmoi-linear-algebra.hp  arithmoi-quadratic-sieve.prof  arithmoi.cabal  cabal.project  changelog.md  readme.md  stack-8.8.3.yaml
.github/workflows/: haskell-ci.yml
Data/: Mod.hs
GHC/TypeNats/: Compat.hs
Math/NumberTheory/: ArithmeticFunctions.hs  Beta.hs  Diophantine.hs  DirichletBeta.hs  DirichletCharacters.hs  Divisors.hs  EisensteinIntegers.hs  Euclidean.hs  EuclideanDomain.hs  GCD.hs  GaussianIntegers.hs  Logarithms.hs  Lucas.hs  Moduli.hs  MoebiusInversion.hs  Partition.hs  Powers.hs  Prefactored.hs  Primes.hs  QuadraticIntegers.hs  Rationals.hs  Recurrences.hs  Recurrencies.hs  Roots.hs  RootsOfUnity.hs  SmoothNumbers.hs  UniqueFactorisation.hs  UniqueFactorization.hs  Unsafe.hs  Utils.hs  Zeta.hs
Math/NumberTheory/ArithmeticFunctions/: Class.hs  Inverse.hs  Mertens.hs  Moebius.hs  NFreedom.hs  SieveBlock.hs  Standard.hs
Math/NumberTheory/ArithmeticFunctions/SieveBlock/: Unboxed.hs
Math/NumberTheory/Curves/: Montgomery.hs
Math/NumberTheory/Euclidean/: Coprimes.hs
Math/NumberTheory/GCD/: LowLevel.hs
Math/NumberTheory/Logarithms/: Internal.hs
Math/NumberTheory/Moduli/: Cbrt.hs  Chinese.hs  Class.hs  CubicSymbol.hs  DiscreteLogarithm.hs  Equations.hs  Internal.hs  Jacobi.hs  JacobiSymbol.hs  Multiplicative.hs  PrimitiveRoot.hs  Singleton.hs  SomeMod.hs  Sqrt.hs  SqrtOld.hs
Math/NumberTheory/Moduli/DiscreteLogarithm/: Internal.hs
Math/NumberTheory/MoebiusInversion/: Int.hs
Math/NumberTheory/Powers/: Cubes.hs  Fourth.hs  General.hs  Integer.hs  Modular.hs  Squares.hs
Math/NumberTheory/Powers/Squares/: Internal.hs
Math/NumberTheory/Primes/: Counting.hs  Factorisation.hs  Heap.hs  IntSet.hs  Sequence.hs  Sieve.hs  Small.hs  Testing.hs  Types.hs
Math/NumberTheory/Primes/Counting/: Approximate.hs  HowPrimeCountingWorks.md  Impl.hs
Math/NumberTheory/Primes/Factorisation/: Certified.hs  LinearAlgebra.hs  Montgomery.hs  QuadraticSieve.hs  TrialDivision.hs  Utils.hs
Math/NumberTheory/Primes/Sieve/: Atkin.hs  Eratosthenes.hs  Indexing.hs  Misc.hs  SmoothSieve.hs
Math/NumberTheory/Primes/Testing/: Certificates.hs  Certified.hs  Probabilistic.hs
Math/NumberTheory/Primes/Testing/Certificates/: Internal.hs
Math/NumberTheory/Quadratic/: EisensteinIntegers.hs  GaussianIntegers.hs
Math/NumberTheory/Recurrences/: Bilinear.hs  Linear.hs  Pentagonal.hs
Math/NumberTheory/Recurrencies/: Bilinear.hs  Linear.hs  Pentagonal.hs
Math/NumberTheory/Roots/: Cubes.hs  Fourth.hs  General.hs  Modular.hs  Squares.hs
Math/NumberTheory/Roots/Squares/: Internal.hs
Math/NumberTheory/Utils/: DirichletSeries.hs  FromIntegral.hs  Hyperbola.hs  RootsOfUnity.hs  Series.hs
Math/NumberTheory/Zeta/: Dirichlet.hs  Hurwitz.hs  Riemann.hs  Utils.hs  ZetaUtils.hs
app/: Atkin.hs  Coprimes.hs  Factorise.hs  LinearAlgebra.hs  QuadraticSieve.hs  SequenceModel.hs
benchmark/: Bench.hs  BinaryExtendedGCDBench.hs  BinaryExtendedGcdBench.hs
benchmark/Math/NumberTheory/: ArithmeticFunctionsBench.hs  DiscreteLogarithmBench.hs  EisensteinIntegersBench.hs  EuclideanBench.hs  GCDBench.hs  GaussianIntegersBench.hs  InverseBench.hs  JacobiBench.hs  MertensBench.hs  PowersBench.hs  PrimesBench.hs  PrimitiveRootsBench.hs  RecurrencesBench.hs  RecurrenciesBench.hs  SequenceBench.hs  SequenceRegression.hs  SieveBlockBench.hs  SmoothNumbersBench.hs  ZetaBench.hs
test-suite/: Doctests.hs  Test.hs
test-suite/Math/NumberTheory/: ArithmeticFunctionsTests.hs  BetaTests.hs  CurvesTests.hs  DiophantineTests.hs  DirichletCharactersTests.hs  EisensteinIntegersTests.hs  EuclideanTests.hs  GCDSpec.hs  GCDTests.hs  GaussianIntegersTests.hs  LogarithmsTests.hs  LucasTests.hs  ModuliTests.hs  MoebiusInversionTests.hs  PrefactoredTests.hs  PrimesTests.hs  RecurrenciesTests.hs  RootsOfUnityTests.hs  SmoothNumbersTests.hs  TestUtils.hs  UniqueFactorisationTests.hs  ZetaTests.hs
test-suite/Math/NumberTheory/ArithmeticFunctions/: InverseTests.hs  MertensTests.hs  SieveBlockTests.hs
test-suite/Math/NumberTheory/GCD/: LowLevelTests.hs
test-suite/Math/NumberTheory/Moduli/: CbrtTests.hs  ChineseTests.hs  ClassTests.hs  CubicSymbolTests.hs  DiscreteLogarithmTests.hs  EquationsTests.hs  JacobiTests.hs  PrimitiveRootTests.hs  SingletonTests.hs  SqrtTests.hs
test-suite/Math/NumberTheory/MoebiusInversion/: IntTests.hs
test-suite/Math/NumberTheory/Powers/: CubesSpec.hs  CubesTests.hs  FourthSpec.hs  FourthTests.hs  GeneralTests.hs  IntegerTests.hs  ModularTests.hs  SquaresSpec.hs  SquaresTests.hs  Utils.hs
test-suite/Math/NumberTheory/Primes/: CountingTests.hs  FactorisationTests.hs  HeapTests.hs  LinearAlgebraTests.hs  QuadraticSieveTests.hs  SequenceTests.hs  SieveTests.hs  TestingTests.hs
test-suite/Math/NumberTheory/Recurrences/: BilinearTests.hs  LinearTests.hs  PentagonalTests.hs
test-suite/Math/NumberTheory/Recurrencies/: BilinearTests.hs  LinearTests.hs  PentagonalTests.hs
test-suite/Math/NumberTheory/TestUtils/: Compose.hs  MyCompose.hs  Wrappers.hs
test-suite/Math/NumberTheory/Zeta/: DirichletTests.hs  RiemannTests.hs
